--- a/index.html
+++ b/index.html
@@ -10,23 +10,27 @@
   <body>
     <main>
       <div class="main-container">
-        <nav class="notifications-container">
+        <div class="notifications-container">
           <div class="notifications-counter">
             <h2>Notifications</h2>
             <sub>3</sub>
           </div>
           <h3 class="allRead-Header">Mark all as read</h3>
-        </nav>
-        <div class="msg-contianer">
-          <div class="img-container">
-            <img src="" alt="" class="msg-img" />
-          </div>
-          <div>
-            <h4 class="userName">Name</h4>
+        </div>
+        <div class="msg-container">
+          <div class="msg-content">
+            <img
+              src="./assets/images/avatar-nathan-peterson.webp"
+              alt=""
+              class="msg-img"
+            />
             <!-- UIS class = user interaction state  -->
+            <h4 class="userName">Name</h4>
             <p class="UIS">Lorem ipsum, dolor sit amet consectetur.</p>
             <span class="red-dot"></span>
-            <div class="userMsgTime"></div>
+          </div>
+          <div>
+            <div class="userMsgTime">5m ago</div>
           </div>
         </div>
       </div>
