added js functionality to toggle read/unread msgs

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
       <div class="main-container">
         <div class="notifications-container">
-          <div class="notifications-counter">
+          <div class="counter-container">
             <h2>Notifications</h2>
             <sub>3</sub>
           </div>
@@ -25,7 +25,24 @@
               class="msg-img"
             />
             <!-- UIS class = user interaction state  -->
-            <h4 class="userName">Name</h4>
+            <h4 class="userName">placeholder(userName):</h4>
+            <p class="UIS">Lorem ipsum, dolor sit amet consectetur.</p>
+            <span class="red-dot"></span>
+          </div>
+          <div>
+            <div class="userMsgTime">5m ago</div>
+          </div>
+        </div>
+        <div class="msg-container">
+          <div class="msg-content">
+            <img
+              src="./assets/images/avatar-nathan-peterson.webp"
+              alt=""
+              class="msg-img"
+            />
+
+            <!-- UIS class = user interaction state  -->
+            <h4 class="userName">placeholder(userName):</h4>
             <p class="UIS">Lorem ipsum, dolor sit amet consectetur.</p>
             <span class="red-dot"></span>
           </div>
@@ -37,4 +54,5 @@
     </main>
     <footer></footer>
   </body>
+  <script src="script.js"></script>
 </html>
