fixed msg counter function to decrease message count when messages are marked read

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="notifications-container">
           <div class="counter-container">
             <h2>Notifications</h2>
-            <sub>3</sub>
+            <sub id="msgCounter">3</sub>
           </div>
           <h3 class="allRead-Header">Mark all as read</h3>
         </div>
@@ -24,6 +24,23 @@
               alt=""
               class="msg-img"
             />
+            <!-- UIS class = user interaction state  -->
+            <h4 class="userName">placeholder(userName):</h4>
+            <p class="UIS">Lorem ipsum, dolor sit amet consectetur.</p>
+            <span class="red-dot"></span>
+          </div>
+          <div>
+            <div class="userMsgTime">5m ago</div>
+          </div>
+        </div>
+        <div class="msg-container">
+          <div class="msg-content">
+            <img
+              src="./assets/images/avatar-nathan-peterson.webp"
+              alt=""
+              class="msg-img"
+            />
+
             <!-- UIS class = user interaction state  -->
             <h4 class="userName">placeholder(userName):</h4>
             <p class="UIS">Lorem ipsum, dolor sit amet consectetur.</p>
