updated css, hover state, images

--- a/index.html
+++ b/index.html
@@ -17,20 +17,94 @@
           </div>
           <h3 class="allRead-Header">Mark all as read</h3>
         </div>
+        <!-- msg-one -->
         <div class="msg-container">
           <div class="msg-content">
             <img
-              src="./assets/images/avatar-nathan-peterson.webp"
+              src="./assets/images/avatar-mark-webber.webp"
               alt=""
               class="msg-img"
             />
             <!-- UIS class = user interaction state  -->
-            <h4 class="userName">placeholder(userName):</h4>
-            <p class="UIS">Lorem ipsum, dolor sit amet consectetur.</p>
+            <h4 class="userName">Mark Webber</h4>
+            <p class="UIS">reacted to your post</p>
+            <p>My first tournament today!</p>
+            <span class="red-dot"></span>
+            <!-- <p>5m ago</p> -->
+          </div>
+          <div>
+            <div class="userMsgTime">1m ago</div>
+          </div>
+        </div>
+        <!-- msg-two -->
+        <div class="msg-container">
+          <div class="msg-content">
+            <img
+              src="./assets/images/avatar-angela-gray.webp"
+              alt=""
+              class="msg-img"
+            />
+
+            <!-- UIS class = user interaction state  -->
+            <h4 class="userName">Angela Gray</h4>
+            <p class="UIS">followed you</p>
             <span class="red-dot"></span>
           </div>
           <div>
             <div class="userMsgTime">5m ago</div>
+          </div>
+        </div>
+        <!-- msg-three -->
+        <div class="msg-container">
+          <div class="msg-content">
+            <img
+              src="./assets/images/avatar-jacob-thompson.webp"
+              alt=""
+              class="msg-img"
+            />
+
+            <!-- UIS class = user interaction state  -->
+            <h4 class="userName">Jacob Thompson</h4>
+            <p class="UIS">has joined your group</p>
+            <p>Chess Club</p>
+            <span class="red-dot"></span>
+          </div>
+          <div>
+            <div class="userMsgTime">1 day ago</div>
+          </div>
+        </div>
+        <div class="msg-container">
+          <div class="msg-content">
+            <img
+              src="./assets/images/avatar-rizky-hasanuddin.webp"
+              alt=""
+              class="msg-img"
+            />
+
+            <!-- UIS class = user interaction state  -->
+            <h4 class="userName">Rizky Hasanuddin</h4>
+            <p class="UIS">Sent you a private message</p>
+            <span class="red-dot"></span>
+          </div>
+          <div>
+            <div class="userMsgTime">5 days ago</div>
+          </div>
+        </div>
+        <div class="msg-container">
+          <div class="msg-content">
+            <img
+              src="./assets/images/avatar-kimberly-smith.webp"
+              alt=""
+              class="msg-img"
+            />
+
+            <!-- UIS class = user interaction state  -->
+            <h4 class="userName">Kimberly Smith</h4>
+            <p class="UIS">Commented on your picture</p>
+            <span class="red-dot"></span>
+          </div>
+          <div>
+            <div class="userMsgTime">1 week ago</div>
           </div>
         </div>
         <div class="msg-container">
@@ -40,31 +114,31 @@
               alt=""
               class="msg-img"
             />
-
             <!-- UIS class = user interaction state  -->
-            <h4 class="userName">placeholder(userName):</h4>
-            <p class="UIS">Lorem ipsum, dolor sit amet consectetur.</p>
+            <h4 class="userName">Nathan Peterson</h4>
+            <p class="UIS">reacted to your recent post</p>
+            <p>5 end-game strategies to increase your win rate</p>
             <span class="red-dot"></span>
           </div>
           <div>
-            <div class="userMsgTime">5m ago</div>
+            <div class="userMsgTime">2 weeks ago</div>
           </div>
         </div>
         <div class="msg-container">
           <div class="msg-content">
             <img
-              src="./assets/images/avatar-nathan-peterson.webp"
+              src="./assets/images/avatar-anna-kim.webp"
               alt=""
               class="msg-img"
             />
-
             <!-- UIS class = user interaction state  -->
-            <h4 class="userName">placeholder(userName):</h4>
-            <p class="UIS">Lorem ipsum, dolor sit amet consectetur.</p>
+            <h4 class="userName">Anna Kim</h4>
+            <p class="UIS">left the group</p>
+            <p>Chess Club</p>
             <span class="red-dot"></span>
           </div>
           <div>
-            <div class="userMsgTime">5m ago</div>
+            <div class="userMsgTime">2 weeks ago</div>
           </div>
         </div>
       </div>
