--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/style.css" />
-    <title>Document</title>
+    <title>Notifications Page</title>
   </head>
   <body>
     <main>
@@ -28,8 +28,8 @@
             <!-- UIS class = user interaction state  -->
             <h4 class="userName">Mark Webber</h4>
             <p class="UIS">reacted to your post</p>
-            <p>My first tournament today!</p>
-            <span class="red-dot"></span>
+            <p class="UIS-2">My first tournament today!</p>
+
             <!-- <p>5m ago</p> -->
           </div>
           <div>
@@ -48,7 +48,6 @@
             <!-- UIS class = user interaction state  -->
             <h4 class="userName">Angela Gray</h4>
             <p class="UIS">followed you</p>
-            <span class="red-dot"></span>
           </div>
           <div>
             <div class="userMsgTime">5m ago</div>
@@ -62,35 +61,33 @@
               alt=""
               class="msg-img"
             />
-
             <!-- UIS class = user interaction state  -->
             <h4 class="userName">Jacob Thompson</h4>
             <p class="UIS">has joined your group</p>
-            <p>Chess Club</p>
-            <span class="red-dot"></span>
+            <p class="UIS-2">Chess Club</p>
           </div>
           <div>
             <div class="userMsgTime">1 day ago</div>
           </div>
         </div>
-        <div class="msg-container">
+        <!-- msg four -->
+        <div class="msg-container msg-containers">
           <div class="msg-content">
             <img
               src="./assets/images/avatar-rizky-hasanuddin.webp"
               alt=""
               class="msg-img"
             />
-
             <!-- UIS class = user interaction state  -->
             <h4 class="userName">Rizky Hasanuddin</h4>
             <p class="UIS">Sent you a private message</p>
-            <span class="red-dot"></span>
           </div>
           <div>
             <div class="userMsgTime">5 days ago</div>
           </div>
         </div>
-        <div class="msg-container">
+        <!-- msg five -->
+        <div class="msg-container msg-containers">
           <div class="msg-content">
             <img
               src="./assets/images/avatar-kimberly-smith.webp"
@@ -101,13 +98,13 @@
             <!-- UIS class = user interaction state  -->
             <h4 class="userName">Kimberly Smith</h4>
             <p class="UIS">Commented on your picture</p>
-            <span class="red-dot"></span>
           </div>
           <div>
             <div class="userMsgTime">1 week ago</div>
           </div>
         </div>
-        <div class="msg-container">
+        <!-- msg six -->
+        <div class="msg-container msg-containers">
           <div class="msg-content">
             <img
               src="./assets/images/avatar-nathan-peterson.webp"
@@ -117,14 +114,14 @@
             <!-- UIS class = user interaction state  -->
             <h4 class="userName">Nathan Peterson</h4>
             <p class="UIS">reacted to your recent post</p>
-            <p>5 end-game strategies to increase your win rate</p>
-            <span class="red-dot"></span>
+            <p class="UIS-2">5 end-game strategies to increase your win rate</p>
           </div>
           <div>
             <div class="userMsgTime">2 weeks ago</div>
           </div>
         </div>
-        <div class="msg-container">
+        <!-- msg seven -->
+        <div class="msg-container msg-containers">
           <div class="msg-content">
             <img
               src="./assets/images/avatar-anna-kim.webp"
@@ -135,7 +132,6 @@
             <h4 class="userName">Anna Kim</h4>
             <p class="UIS">left the group</p>
             <p>Chess Club</p>
-            <span class="red-dot"></span>
           </div>
           <div>
             <div class="userMsgTime">2 weeks ago</div>
